<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".campaign_information">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_spacing_margin">


        <ImageView
            android:id="@+id/campaign_Image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/campaign_img_test" />
        <TextView
            android:id="@+id/campaign_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/basic_margin"
            android:layout_marginTop="@dimen/medium_spacing_margin"
            android:layout_marginEnd="@dimen/basic_margin"
            android:fontFamily="@font/roboto_black"
            android:text="@string/campaign_title"
            android:textColor="@color/color_2"
            android:textSize="@dimen/title_size"
            app:layout_constraintTop_toBottomOf="@+id/campaign_Image" />



        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_height"
            android:layout_marginTop="@dimen/basic_margin"
            android:paddingBottom="@dimen/medium_spacing_margin"
            app:layout_constraintTop_toBottomOf="@+id/campaign_title"
            android:fillViewport="true">

            <TextView
                android:id="@+id/campaign_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/basic_margin"
                android:layout_marginEnd="@dimen/basic_margin"
                android:scrollbars="vertical"
                android:text="@string/campaign_detail"
                android:textAlignment="inherit" />
        </ScrollView>


        <ImageView
            android:id="@+id/time_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/basic_margin"
            android:layout_marginTop="@dimen/basic_margin"

            app:layout_constraintEnd_toStartOf="@+id/campaign_left_time"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/scrollView"
            app:layout_constraintTop_toBottomOf="@+id/scrollView"
            app:srcCompat="@drawable/ic_baseline_access_time_24" />
        <TextView
            android:id="@+id/campaign_left_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_margin"
            android:fontFamily="@font/roboto_black"
            android:text="@string/campaign_left_time"
            android:textColor="@color/color_2"
            app:layout_constraintBottom_toBottomOf="@+id/time_icon"
            app:layout_constraintStart_toEndOf="@+id/time_icon"
            app:layout_constraintTop_toTopOf="@+id/time_icon" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>